populate cache as individual entries